Tue Jun 17 11:47:52 2003  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Future.{h,cpp}: Changed all uses of ACE_Thread_Mutex to
	  ACE_Recursive_Thread_Mutex and also changed the
 	  ACE_Condition_Thread_Mutex to
 	  ACE_Condition_Recursive_Thread_Mutex.  This should fix bugs with
 	  deadlock.  Thanks to Thomas Groth <groth.th@nord-com.net> for 
	  providing these patches.

	* ace/DLL_Manager.cpp (symbol): Added missing newlines in
	  debug/error messages.  Thanks to Rick Ohnemus
 	  <rick.ohnemus@systemware.com> for reporting this.

Tue Jun 17 15:49:32 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/os_include/aio.h:
        * ace/os_include/assert.h:
        * ace/os_include/complex.h:
        * ace/os_include/cpio.h:
        * ace/os_include/ctype.h:
        * ace/os_include/dirent.hd:
        * ace/os_include/lfcn.h:
        * ace/os_include/errno.h:
        * ace/os_include/fcntl.h:
        * ace/os_include/fenv.h:
        * ace/os_include/float.h:
        * ace/os_include/fmtmsg.h:
        * ace/os_include/fnmatch.h:
        * ace/os_include/ftw.h:
        * ace/os_include/glob.h:
        * ace/os_include/grp.h:
        * ace/os_include/iconv.h:
        * ace/os_include/inttypes.h:
        * ace/os_include/iso646.h:
        * ace/os_include/langinfo.h:
        * ace/os_include/libgen.h:
        * ace/os_include/limits.h:
        * ace/os_include/local.h:
        * ace/os_include/math.h:
        * ace/os_include/monetary.h:
        * ace/os_include/mqueue.h:
        * ace/os_include/ndbm.h:
        * ace/os_include/netdb.h:
        * ace/os_include/nl_types.h:
        * ace/os_include/poll.h:
        * ace/os_include/pthread.h:
        * ace/os_include/pwd.h:
        * ace/os_include/regex.h:
        * ace/os_include/sched.h:
        * ace/os_include/search.h:
        * ace/os_include/semaphore.h:
        * ace/os_include/setjmp.h:
        * ace/os_include/signal.h:
        * ace/os_include/spawn.h: