@@ -48,6 +48,12 @@ endif # ssl
 #       Local targets (and local hacks)
 #----------------------------------------------------------------------------
 
+ifeq ($(shared_libs),1)
+ifneq ($(SHLIB),)
+CPPFLAGS     += -DACE_SSL_BUILD_DLL
+endif
+endif
+
 #----------------------------------------------------------------------------
 #       Dependencies
 #----------------------------------------------------------------------------
